grammars/stata/test/corpus/stata.txt
========================================
Comments and strings
========================================
// line comment
/* block comment */
display "hello $name"
display `"`world'"'
display "$global"

---

(source_file
  (comment
    (line_comment))
  (comment
    (block_comment))
  (command
    name: (identifier)
    (string
      (double_string
        (global_macro
          (identifier)))))
  (command
    name: (identifier)
    (string
      (compound_string_depth_1
        (local_macro_depth_1
          (identifier)))))
  (command
    name: (identifier)
    (string
      (double_string
        (global_macro
          (identifier))))))

========================================
Macros and numbers
========================================
local my_local `other'
global my_global ${other}
display `1' 3.14 .a _n

---

(source_file
  (macro_definition
    name: (identifier)
    (local_macro_depth_1
      (identifier)))
  (macro_definition
    name: (identifier)
    (global_macro
      (identifier)))
  (command
    name: (identifier)
    (local_macro_depth_1)
    (number)
    (missing_value)
    (builtin_variable)))

========================================
Program and mata blocks
========================================
program define myprog
    display "ok"
end
mata:
real x
end
mata { real y }
mata 1 + 2

---

(source_file
  (program_definition
    name: (identifier)
    (command
      name: (identifier)
      (string
        (double_string))))
  (mata_block)
  (mata_block)
  (mata_block))

========================================
Control keywords, types, operators
========================================
if x == 1
replace price = 2
foreach i in 1 2
display `i'
generate byte b = 1
generate str10 s = "hi"

---

(source_file
  (command
    name: (identifier)
    (identifier)
    (operator)
    (number))
  (command
    name: (identifier)
    (identifier)
    (operator)
    (number))
  (command
    name: (identifier)
    (identifier)
    (identifier)
    (number)
    (number))
  (command
    name: (identifier)
    (local_macro_depth_1
      (identifier)))
  (command
    name: (identifier)
    (type_keyword)
    (identifier)
    (operator)
    (number))
  (command
    name: (identifier)
    (type_keyword)
    (identifier)
    (operator)
    (string
      (double_string))))
